--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nike Style Site</title>
+  <title>Moxo</title>
   <style>
     * {
       margin: 0;
@@ -105,10 +105,10 @@
   <section class="hero">
     <div class="hero-text">
       <h1>"Moxo — место, где встречаются идеи."</h1>
-      <p>Новые возможности связи между вами и вашми близкими</p>
+      <p>Новые возможности общения между вами и вашими близкими</p>
       <button>Начать!</button>
     </div>
-    <img src="https://i.imgur.com/YO0eQod.png" alt="my image">
+   <img src="images/set-young-people-using-smartphones_23-2148861137-Photoroom.png" alt="">
   </section>
 
   <footer>
