--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="logo">Moxo</div>
     <nav>
       <a href="#">Главная</a>
-      <a href="#">О нас</a>
+      <a href="#about">О нас</a>
       <a href="#">Обратная связь</a>
     </nav>
   </header>
@@ -122,6 +122,10 @@
     &copy; 2025 все права защищены.
   </footer>
 
+  
+  <section id="about">
+        <p>Добропожаловать на мой сайт! Надеюсь вам понравится =)</p>
+  </section>
   
 
 
